<?xml version="1.0"?>
<package format="2">

  <name>velodyne_simulator8</name>
  <version>1.1.0</version>
  <description>
    Metapackage allowing easy installation of Velodyne simulation components.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel Fernandez-Carmona</maintainer>
  <url type="website">http://wiki.ros.org/velodyne_simulator</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/velodyne_simulator</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/velodyne_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>velodyne_description8</exec_depend>
  <exec_depend>velodyne_gazebo_plugins8</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
